# mediaPlayApp

./: .gitignore  README.md
automotive/: build.gradle.kts  settings.gradle.kts
automotive/src/androidTest/java/com/example/mediaplayerapp/: AudioEqualizerTest.kt
automotive/src/main/: AndroidManifest.xml
automotive/src/main/cpp/: BiquadFilters.h  CMakeLists.txt  ThreeBandEQ.h  audio_effects_manager.cpp  filters.h
automotive/src/main/java/com/example/mediaplayerapp/: AudioEqualizer.kt  AudioPlaybackEngine.kt  MediaPlayerNotificationManager.kt  MediaPlayerService.kt
automotive/src/main/java/com/example/mediaplayerapp/ui/: MainActivity.kt
automotive/src/main/java/com/example/mediaplayerapp/ui/equalizer/: EqualizerFragment.kt
automotive/src/main/java/com/example/mediaplayerapp/ui/ui/main/: MainFragment.kt  MainViewModel.kt
automotive/src/main/java/com/example/mediaplayerapp/viewmodel/: EqualizerViewModel.kt  MainViewModel.kt  MediaPlayerViewModel.kt
automotive/src/main/res/drawable/: album.xml
automotive/src/main/res/layout/: activity_main.xml  fragment_equalizer.xml  fragment_main.xml
automotive/src/main/res/navigation/: nav_graph.xml
automotive/src/main/res/values/: colors.xml  strings.xml  themes.xml
automotive/src/main/res/values/values/: colors.xml  dimens.xml  strings.xml  themes.xml
automotive/src/test/java/com/example/mediaplayerapp/: EqualizerViewModelTest.kt  MainFragmentTest.kt  MainViewModelTest.kt  MediaPlayerNotificationManagerTest.kt  MediaPlayerServiceTest.kt  MediaPlayerViewModelTest.kt
